DRILL-8117: Clean up deprecated Apache code in Drill